--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      href="http://fonts.googleapis.com/css?family=Cantora+One|Ropa+Sans:400,400italic"
+      rel="stylesheet"
+      type="text/css"
+    />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
